--- a/settings.json
+++ b/settings.json
@@ -19,7 +19,8 @@
                 {"command": "type", "args": { "text": "\u000D--\u000D" }},
                 "cursorLeftSelect","cursorLeftSelect","cursorLeftSelect","cursorLeftSelect"
                 "editor.action.clipboardCutAction",
-                "workbench.action.terminal.paste"        
+                "workbench.action.terminal.paste",
+                "workbench.action.focusActiveEditorGroup"  
             ]
         }
     ],
