--- a/settings.json
+++ b/settings.json
@@ -25,6 +25,7 @@
         }
     ],
     "update.mode": "none",
+    "update.enableWindowsBackgroundUpdates": false
     "editor.tabCompletion": "on",
     "terminal.integrated.shell.windows": "C:\\WINDOWS\\System32\\wsl.exe",
     "explorer.confirmDragAndDrop": false,
