--- a/settings.json
+++ b/settings.json
@@ -56,15 +56,12 @@
             "icon": "terminal-cmd"
         },
         "Git Bash": {
-            "source": "Git Bash"
-        },
-        "WSL": {
-            "path": "C:\\Windows\\System32\\wsl.exe",
-            "args": [
-                "-d",
-                "Ubuntu-20.04"
-            ]
+            "source": "Git Bash",
+            "args": ["-c", "chcp.com 65001;bash"]
         }
     },
-    "terminal.integrated.defaultProfile.windows": "Git Bash"
+    "terminal.integrated.defaultProfile.windows": "Git Bash",
+    "redhat.telemetry.enabled": true,
+    "gradle.autoDetect": "off",
+    "gradle.nestedProjects": true
 }
